[gd_scene load_steps=12 format=2]

[ext_resource path="res://scenes/gameplay/Ragdoll.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/gameplay/pause-layer/pause-layer.tscn" type="PackedScene" id=2]
[ext_resource path="res://input/touchJoyPad.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/gameplay/KillZone.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/gameplay/HUD.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/gameplay/RoundEnd.tscn" type="PackedScene" id=6]
[ext_resource path="res://scenes/gameplay/VectorCreator.tscn" type="PackedScene" id=7]
[ext_resource path="res://assets/TileSetterOut/Brick/Brick/tileset_Brick.tres" type="TileSet" id=8]
[ext_resource path="res://assets/Final/Background_0.png" type="Texture" id=9]
[ext_resource path="res://assets/Final/Background_1.png" type="Texture" id=10]
[ext_resource path="res://scenes/gameplay/levels/level1/level1.gd" type="Script" id=11]

[node name="Level1" type="Node"]
script = ExtResource( 11 )

[node name="PauseLayer" parent="." instance=ExtResource( 2 )]

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource( 8 )
cell_size = Vector2( 32, 32 )
collision_layer = 9
format = 1
tile_data = PoolIntArray( 0, 0, 4, 1, 0, 196609, 2, 0, 196609, 3, 0, 196609, 4, 0, 196609, 5, 0, 196609, 6, 0, 196609, 7, 0, 196609, 8, 0, 196609, 9, 0, 196609, 10, 0, 196609, 11, 0, 196609, 12, 0, 196609, 13, 0, 196609, 14, 0, 196609, 15, 0, 196609, 16, 0, 196609, 17, 0, 196609, 18, 0, 196609, 19, 0, 196609, 20, 0, 196609, 21, 0, 196609, 22, 0, 196609, 23, 0, 196609, 24, 0, 196609, 25, 0, 196609, 26, 0, 196609, 27, 0, 196609, 28, 0, 196609, 29, 0, 196609, 30, 0, 196609, 31, 0, 196609, 32, 0, 196609, 33, 0, 196609, 34, 0, 196609, 35, 0, 196609, 36, 0, 196609, 37, 0, 196609, 38, 0, 196609, 39, 0, 6, 40, 0, 2, 65536, 0, 65539, 65575, 0, 65536, 65576, 0, 65538, 131072, 0, 65539, 131111, 0, 65536, 131112, 0, 65538, 196608, 0, 65539, 196647, 0, 65536, 196648, 0, 65538, 262144, 0, 65539, 262183, 0, 65536, 262184, 0, 65538, 327680, 0, 65539, 327719, 0, 65536, 327720, 0, 65538, 393216, 0, 65539, 393246, 0, 3, 393255, 0, 65536, 393256, 0, 65538, 458752, 0, 65539, 458782, 0, 65539, 458791, 0, 65536, 458792, 0, 65538, 524288, 0, 65539, 524317, 0, 0, 524318, 0, 131079, 524324, 0, 0, 524325, 0, 1, 524326, 0, 1, 524327, 0, 131078, 524328, 0, 65538, 589824, 0, 65539, 589853, 0, 131072, 589854, 0, 196613, 589855, 0, 7, 589860, 0, 65540, 589861, 0, 131073, 589862, 0, 131073, 589863, 0, 65542, 589864, 0, 65538, 655360, 0, 65539, 655391, 0, 65539, 655396, 0, 65539, 655399, 0, 65536, 655400, 0, 65538, 720896, 0, 65539, 720927, 0, 196612, 720928, 0, 196609, 720929, 0, 196609, 720930, 0, 196609, 720931, 0, 196609, 720932, 0, 196615, 720935, 0, 65536, 720936, 0, 65538, 786432, 0, 65539, 786434, 0, 3, 786471, 0, 65536, 786472, 0, 65538, 851968, 0, 65539, 851970, 0, 65539, 852007, 0, 65536, 852008, 0, 65538, 917504, 0, 65539, 917506, 0, 196612, 917507, 0, 196609, 917508, 0, 8, 917509, 0, 196609, 917510, 0, 196610, 917543, 0, 65536, 917544, 0, 65538, 983040, 0, 65539, 983044, 0, 65539, 983079, 0, 65536, 983080, 0, 65538, 1048576, 0, 65539, 1048580, 0, 65539, 1048615, 0, 65536, 1048616, 0, 65538, 1114112, 0, 131076, 1114113, 0, 1, 1114114, 0, 1, 1114115, 0, 1, 1114116, 0, 131080, 1114117, 0, 1, 1114118, 0, 1, 1114119, 0, 1, 1114120, 0, 1, 1114121, 0, 1, 1114122, 0, 2, 1114151, 0, 65536, 1114152, 0, 65538, 1179648, 0, 65536, 1179649, 0, 65537, 1179650, 0, 65537, 1179651, 0, 65537, 1179652, 0, 65537, 1179653, 0, 65537, 1179654, 0, 65537, 1179655, 0, 65537, 1179656, 0, 65537, 1179657, 0, 65537, 1179658, 0, 65538, 1179687, 0, 65536, 1179688, 0, 65538, 1245184, 0, 65536, 1245185, 0, 65537, 1245186, 0, 65537, 1245187, 0, 65537, 1245188, 0, 65537, 1245189, 0, 65537, 1245190, 0, 65537, 1245191, 0, 65537, 1245192, 0, 65537, 1245193, 0, 65537, 1245194, 0, 65538, 1245223, 0, 65536, 1245224, 0, 65538, 1310720, 0, 65536, 1310721, 0, 65537, 1310722, 0, 65537, 1310723, 0, 65537, 1310724, 0, 65537, 1310725, 0, 65537, 1310726, 0, 65537, 1310727, 0, 65537, 1310728, 0, 65537, 1310729, 0, 65537, 1310730, 0, 65538, 1310759, 0, 65536, 1310760, 0, 65538, 1376256, 0, 65536, 1376257, 0, 65537, 1376258, 0, 65537, 1376259, 0, 65537, 1376260, 0, 65537, 1376261, 0, 65537, 1376262, 0, 65537, 1376263, 0, 65537, 1376264, 0, 65537, 1376265, 0, 65537, 1376266, 0, 65538, 1376295, 0, 65536, 1376296, 0, 65538, 1441792, 0, 131072, 1441793, 0, 131073, 1441794, 0, 131073, 1441795, 0, 131073, 1441796, 0, 131073, 1441797, 0, 131073, 1441798, 0, 131073, 1441799, 0, 131073, 1441800, 0, 131073, 1441801, 0, 131073, 1441802, 0, 196613, 1441803, 0, 196609, 1441804, 0, 196609, 1441805, 0, 196609, 1441806, 0, 196609, 1441807, 0, 196609, 1441808, 0, 196609, 1441809, 0, 196609, 1441810, 0, 196609, 1441811, 0, 196609, 1441812, 0, 196609, 1441813, 0, 196609, 1441814, 0, 196609, 1441815, 0, 196609, 1441816, 0, 196609, 1441817, 0, 196609, 1441818, 0, 196609, 1441819, 0, 196609, 1441820, 0, 196609, 1441821, 0, 196609, 1441822, 0, 196609, 1441823, 0, 196609, 1441824, 0, 196609, 1441825, 0, 196609, 1441826, 0, 196609, 1441827, 0, 196609, 1441828, 0, 196609, 1441829, 0, 196609, 1441830, 0, 196609, 1441831, 0, 196614, 1441832, 0, 131074 )

[node name="Ragdoll" parent="." instance=ExtResource( 1 )]
position = Vector2( 157, 404 )

[node name="KillZone" parent="." instance=ExtResource( 4 )]
position = Vector2( 1085, 360 )

[node name="SpawnPoint" type="Position2D" parent="." groups=["spawn_point"]]
position = Vector2( 156, 373 )

[node name="HUD" parent="." instance=ExtResource( 5 )]

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 0.5, 1 )
motion_mirroring = Vector2( 1280, 0 )

[node name="TextureRect" type="TextureRect" parent="ParallaxBackground/ParallaxLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 1279.0
margin_bottom = 715.0
mouse_filter = 2
texture = ExtResource( 9 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ParallaxLayer2" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2( 1280, 0 )

[node name="TextureRect" type="TextureRect" parent="ParallaxBackground/ParallaxLayer2"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 1279.0
margin_bottom = 715.0
mouse_filter = 2
texture = ExtResource( 10 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RoundEnd" parent="." instance=ExtResource( 6 )]

[node name="Input" type="CanvasLayer" parent="."]

[node name="VectorCreator" parent="Input" groups=["JoyStick"] instance=ExtResource( 7 )]

[node name="ViewportContainer" type="ViewportContainer" parent="Input"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1.0
margin_top = -1.0
margin_right = 1.0
margin_bottom = -1.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
stretch = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GamePad" parent="Input/ViewportContainer" instance=ExtResource( 3 )]
z_index = 1
leftPadStyle = "JoyStick"
mapAnalogToDpad = false
visibleOnlyTouchscreen = false
AnalogTapToShow = true

[connection signal="ragdoll_destroyed" from="Ragdoll" to="." method="_on_Ragdoll_ragdoll_destroyed"]
[connection signal="ragdoll_high_impact" from="Ragdoll" to="." method="_on_Ragdoll_ragdoll_high_impact"]
